@@ -26,7 +26,6 @@ Boston, MA 02111-1307, USA.  */
 extern int gpsim_read (char *buf, unsigned max_size);
 extern void initialize_readline (void);
 extern void exit_gpsim(void);
-extern const char *get_dir_delim(const char *path);
 
 extern int input_mode;
 #ifndef HAVE_GUI
